tests/ui/parser/attribute/attr-bad-meta-3.stderr
error: expected `]`, found `token`
  --> $DIR/attr-bad-meta-3.rs:1:10
   |
LL | #[path() token]
   |          ^^^^^ expected `]`

error: aborting due to 1 previous error

